force-app/main/default/objects/OpportunityLineItem/fields/Count_Of_Non_Rejected_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Non_Rejected_Quotes__c</fullName>
    <formula>Opportunity.Count_Of_Non_Rejected_Quotes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Of Non Rejected Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>