force-app/main/default/objects/OpportunityLineItem/fields/Is_Medical_Advice_Numbered_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical_Advice_Numbered_Product__c</fullName>
    <formula>PricebookEntry.Product2.Is_Medical_Advice_Numbered_Product__c</formula>
    <label>Is Medical Advice Numbered Product</label>
    <type>Checkbox</type>
</CustomField>