force-app/main/default/objects/OpportunityLineItem/fields/Medical_Advice_Feature__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Feature__c</fullName>
    <label>Medical Advice Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Advice_Feature</valueSetName>
    </valueSet>
</CustomField>