force-app/main/default/objects/OpportunityLineItem/fields/Medical_Advice_Number_Exception__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number_Exception__c</fullName>
    <description>Field holds the Product Number if the Medical Advice Number has the &apos;Is Medical Advice Number Exception&apos; flag checked</description>
    <label>Medical Advice Number Exception</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>