force-app/main/default/objects/OpportunityLineItem/fields/Product_Added_By_Admin__c.field-meta.xml
<CustomField>
    <fullName>Product_Added_By_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field tracks if the product added automatically by Admin.</description>
    <label>Product Added By Admin</label>
    <type>Checkbox</type>
</CustomField>