force-app/main/default/objects/OpportunityLineItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Stores the product type form the product object.</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>