force-app/main/default/objects/OpportunityLineItem/fields/Repeat_After_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Repeat_After_In_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This will determine the frequency in days for the Schedule shipment to happen.</inlineHelpText>
    <label>Repeat Frequency (In Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>