force-app/main/default/objects/OpportunityLineItem/fields/Repeat_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Repeat_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will determine the when the schedule need to be end dated.</inlineHelpText>
    <label>Repeat End Date</label>
    <type>Date</type>
</CustomField>