force-app/main/default/objects/OpportunityLineItem/fields/Repeat_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This will determine the Quantity of the product to be included in the Schedule shipment.</inlineHelpText>
    <label>Repeat Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>