force-app/main/default/objects/OpportunityLineItem/fields/Split_Price__c.field-meta.xml
<CustomField>
    <fullName>Split_Price__c</fullName>
    <formula>PricebookEntry.Split_Price__c</formula>
    <label>Split Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>