force-app/main/default/objects/OpportunityLineItem/fields/Split_Qty__c.field-meta.xml
<CustomField>
    <fullName>Split_Qty__c</fullName>
    <formula>PricebookEntry.Split_Qty__c</formula>
    <label>Split Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>