force-app/main/default/objects/OpportunityLineItem/validationRules/All_Chk_If_No_New_Prod_Added_For_Sub_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Chk_If_No_New_Prod_Added_For_Sub_Opp</fullName>
    <active>false</active>
    <description>Check to make sure no new products can be added for a subscription Opportunity.</description>
    <errorConditionFormula>AND(
	ISNEW(),
	Opportunity.Pricebook2.IsSubscription__c,
	Product_Added_By_Admin__c = FALSE
)</errorConditionFormula>
    <errorMessage>No new Products can be added for an Opportunity associated to a Subscription Pricebook.</errorMessage>
</ValidationRule>